--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -22,8 +22,21 @@
       </div>
       <div id="navbar" class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="{% url 'index' %}">Home</a></li>
-          <li><a href="#about">About</a></li>
+          {% if active == "index" %}
+            <li class="active"><a href="{% url 'index' %}">Home</a></li>
+          {% else %}
+            <li><a href="{% url 'index' %}">Home</a></li>
+          {% endif %}
+          {% if active == "shows" %}
+            <li class="active"><a href="{% url 'shows' %}">TV Shows</a></li>
+          {% else %}
+          <li><a href="{% url 'shows' %}">TV Shows</a></li>
+          {% endif %}
+          {% if active == "about" %}
+            <li class="active"><a href="{% url 'about' %}">About</a></li>
+          {% else %}
+            <li><a href="{% url 'about' %}">About</a></li>
+          {% endif %}
         </ul>
       </div><!--/.nav-collapse -->
     </div>
