Fix small error in shows view

--- a/frontend/templates/dropdown.html
+++ b/frontend/templates/dropdown.html
@@ -5,7 +5,7 @@
       <span class="caret"></span>
     </button>
     <ul class="dropdown-menu">
-      <li><button class="skip link" data-id="{{ id }}">Skip</button></li>
+      <li><button class="skip link" data-id="{{ id }}">{{ text }}</button></li>
     </ul>
   </div>
 </td>
